# StockFullstack

./: .dockerignore  .env  .envrc  .gitattributes  .gitignore  DOCKER_README.md  README.md  TODO.md  debug_backtest.py  docker-compose.dev.yaml  docker-compose.yaml  dtf  flake.nix  podman-compose.yaml  pyproject.toml  req.txt  run.sh  run_ai_rocm.sh  setup_windows_gpu.bat  test_gpu_options.sh  test_single_backtest.py  test_timeout.py  train_ai.sh  vision.txt  watch-and-rebuild.sh
Research/: account.ipynb  config.sh  req.txt
Research/alpaca/: account.ipynb
ai/: Dockerfile  cache_utils.py  comprehensive_training.py  demo.py  demo_runner.py  entrypoint.sh  main.py  perf.md  performance_benchmark.py  pyproject.toml  rnn.md  test_pipeline.py  utils.py
ai/.vision/: 01_improvements.md  02_profitable.md
ai/agent/: alpaca_system.py  ensemble_sys.py  pytorch_system.py  simple_training.py
ai/arenas/: swing_trading.py
ai/backend/alpaca/: .dockerignore  req.txt
ai/backend/alpaca/api/: portfolio_service.py
ai/backend/alpaca/cli/: apca.py  cli_optimizer.py  handlers.py
ai/backend/alpaca/core/: util.py
ai/backend/alpaca/tests/: test.py  test_cli.py
ai/clean_data/: asset_grouping.py  preprocessing.py  pytorch_data.py  utils.py
ai/config/: demo_config.py  settings.py
ai/data_sources/: hybrid_manager.py  yahoo_loader.py
ai/features/: feature_engine.py
ai/mcps/: alpaca_interface.py
ai/models/: a3c.py  lstm.py
ai/monitoring/: dashboard.py  performance_metrics.py
ai/strategies/: baseline_strategy.py  improved_rnn_strategy.py  rnn_trading.py
ai/tests/: test_config.py  test_pipeline.py  test_training.py
ai/utils/: device_utils.py
backend/alpaca/: Dockerfile  alpaca.md  apca.py  cli_optimizer.py  commands.py  config.py  entrypoint.sh  handlers.py  loaders.py  portfolio.ipynb  portfolio_service.py  start_portfolio_service.sh  test.py  util.py
backend/alpaca/api/: portfolio_service.py
backend/alpaca/cli/: __init__.py  apca.py  cli_optimizer.py  commands.py  handlers.py
backend/alpaca/core/: __init__.py  config.py  util.py
backend/alpaca/handlers/: __init__.py  handlers.py
backend/alpaca/research/: portfolio.html  portfolio.ipynb
backend/alpaca/sdk/: clients.py  loaders.py
backend/alpaca/serializers/: Asset.py  Position.py  Watchlist.py  __init__.py
backend/alpaca/services/: portfolio_service.py
backend/alpaca/tests/: test.py
backend/lean/Alpha/: config.json  main.py  qc.code-workspace  research.ipynb
backend/lean/Clone of January Effect in Stocks/: alpha.py  config.json  main.py  (+2 more)
dashboard/: .dockerignore  Dockerfile  bun.lockb  entrypoint.sh  middleware.ts  next.config.ts  package-lock.json  package.json
dashboard/components/: AuthGuard.tsx  Sidebar.tsx
dashboard/layouts/: Orders.tsx
dashboard/lib/: alpaca-client.ts  alpaca.ts  config.ts  utils.ts  websocket  websocket.ts
dashboard/providers/: Providers.tsx
dashboard/scripts/: clean_packages.sh  reset-password.ts
dashboard/src-tauri/: tauri.conf.json
frontend/: bun.lockb  middleware.ts  package-lock.json  package.json
frontend/app/: Providers.tsx  layout.tsx  page.tsx
frontend/components/: DirectApiTest.tsx  Navbar.tsx  Providers.tsx  ScrollBar.tsx  ServiceInspector.tsx  Sidebar.tsx  ThemeChanger.tsx
frontend/hooks/: use-toast.ts  useOnClickOutside.ts  useSortableData.ts
frontend/lib/: alpaca.ts  auth.ts  commandExecutor.ts  config.ts  processes.ts  userdb.ts  utils.ts  websocket.ts
frontend/prisma/: schema.prisma  users.db
frontend/providers/: Providers.tsx
frontend/types/: alpaca.ts  auth.ts  error.tsx  order.ts
perf/: comprehensive_report_20250908_225705.json  comprehensive_report_20250908_225705.md  comprehensive_report_20250909_000132.json  comprehensive_report_20250909_000132.md
research/: 01_yfinance.ipynb
scripts/: frontend.sh  install.sh  train_ai.sh  utils.sh  watch-and-rebuild.sh  watcher.sh
scripts/arch/: archreq.sh  dos2unix.sh  install.sh  install_deps.sh  packages.txt  system_software.sh  usersetup.sh
scripts/config/: load_conf.sh  wsl.conf
scripts/db/: user.sh
scripts/git/: init.sh
scripts/ubuntu/: garbage_collect.sh  install.sh  install_deps.sh
scripts/unix/: user.sh
scripts/wsl/: .wslconfig  load_conf.sh  setup_gpu.sh  wsl.conf
stock_fullstack/: __init__.py
stock_fullstack/common/: utils.py
stockfullstack.egg-info/: PKG-INFO  requires.txt  top_level.txt
trading-platform/: bun.lockb  middleware.ts  package-lock.json  package.json
trading-platform/components/: DirectApiTest.tsx
trading-platform/hooks/: use-toast.ts  useSortableData.ts
trading-platform/layouts/: Positions.tsx
trading-platform/lib/: websocket.ts
trading-platform/providers/: Providers.tsx
trading-platform/scripts/: reset-password.ts
(+152 files in other folders)
