# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-fullstack"
version = "0.1.0"
description = "Stock trading environment"
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.13"

license = { text = "MIT" } # Or your preferred license
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]


dependencies = [
    # Core & Data
    "pandas",
    "numpy",
    "scipy",
    "redis",
    "result",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    # Broker
    "alpaca-py",
    # Finance & Quant
    "quantstats",
    "pyportfolioopt",
    "backtesting",
    "talipp",
    # Machine Learning
    # "peewee<3.18.2",  # Pin to avoid build issues on 3.13
    # "torchvision",
    # "torchaudio",
    "gymnasium",
    "stable-baselines3",
    # "mcp",
    # Visualization & UI
    "IPython",
    # "tabulate",
    # "seaborn",
    # "streamlit",
    "websocket>=0.2.1",
    "torch>=2.7.1",
    "scikit-learn>=1.7.1",
    "yfinance>=0.2.65",
]

[project.scripts]
stock-run = "ai.main:run_main"

[tool.uv]
dev-dependencies = [
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai", "backend"]
exclude = [
    "ai/tests",     # Exclude tests
    "ai/debug*",    # Exclude debug utils
    "ai/monitoring", # If monitoring is separate
    "backend/lean/"
]

[tool.setuptools]
py-modules = []  # No single modules


# [project.urls]
# Homepage = "https://github.com/your-username/stocks"
# Repository = "https://github.com/your-username/stocks"





[tool.ruff]
line-length = 125
lint.select = [
  "E", "F", "W",
   "B", "C", # "I", "D", "UP"  # Add bugbear, complexity, docstrings, pyupgrade
]

lint.ignore = [
#     "E501",  # Allow long lines if needed
#     "D203"   # Docstring preferences
    "C901",  # Too Complex,
    # "E501",  # Line too long
]

extend-exclude = [
    "dashboard",      # Exclude the entire JS/TS dashboard frontend
    "backend/lean",   # Exclude the LEAN integration directory
    "ai/tests",       # Exclude test files
    "ai/debug*",      # Exclude debug utilities
    "ai/monitoring",  # Exclude monitoring code
    "backend/alpaca/tests/",
    "backend/alpaca/research/",
]

[tool.ruff.format]
indent-style = "tab"
